--- a/meu-projeto/src/App.css
+++ b/meu-projeto/src/App.css
@@ -1,4 +1,4 @@
-#root {
+/* #root {
   max-width: 1280px;
   margin: 0 auto;
   padding: 2rem;
@@ -39,4 +39,31 @@
 
 .read-the-docs {
   color: #888;
+} */
+
+* {
+  margin: 0;
+}
+
+#container {
+  border: 1px black solid;
+  width: 800px;
+  height: 600px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.central {
+  width: 300px;
+  height: 300px;
+  border: 1px black solid;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+}
+
+button {
+  margin-top: 20px;
 }
