--- a/meu-projeto/src/App.css
+++ b/meu-projeto/src/App.css
@@ -45,25 +45,19 @@
   margin: 0;
 }
 
-#container {
-  border: 1px black solid;
-  width: 800px;
-  height: 600px;
-  display: flex;
-  justify-content: center;
-  align-items: center;
+#title {
+  border: 1px #000000 solid;
+  margin: 10px 10px;
+  width: fit-content;
+  padding: 10px 10px;
 }
 
-.central {
-  width: 300px;
-  height: 300px;
-  border: 1px black solid;
+.container {
+  border: 1px #000000 solid;
+  margin: 10px;
+  padding: 10px;
   display: flex;
-  justify-content: center;
   align-items: center;
-  flex-direction: column;
-}
-
-button {
-  margin-top: 20px;
+  justify-content: center;
+  gap: 30px;
 }
